--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,41 @@
+/* …dentro do map … */
+const isApprovalsStep = item.name === "Approvals and Restrictions";
+
+return (
+  <Fragment key={item.key}>
+    <Timeline.Step progress={!isLast} status={statusValue}>
+      <div className="relative flex flex-col items-center justify-center min-h-[180px]">
+
+        {/* seta extra entre passos, caso exista */}
+        {hasExtra && (
+          <span className="absolute -top-3 left-1/2 -translate-x-1/2">
+            <Timeline.Link status={next?.originalStatus} />
+          </span>
+        )}
+
         {isApprovalsStep ? (
-          /* ------------- NOVO BLOCO ------------- */
           <>
-            {/* Quadradinho que contém tooltip **e** dispara o modal */}
-            <span
-              className="absolute -top-3 left-1/2 -translate-x-1/2 z-10
-                         cursor-pointer group"
+            {/* ---------- único elemento que abre o modal ---------- */}
+            <Timeline.Link
+              status={statusValue}
+              hoverContent={
+                <div className="text-xs text-gray-700">
+                  <div><strong>Step:</strong> Approvals &amp; Restrictions</div>
+                  <div><strong>Status:</strong> {statusValue}</div>
+                  <div><strong>Total steps:</strong> {approvalsSteps.length}</div>
+                </div>
+              }
               onMouseEnter={() => setShowApprovalsModal(true)}
               onFocus={() => setShowApprovalsModal(true)}
-            >
-              <Timeline.Link
-                status={statusValue}
-                hoverContent={
-                  <div className="text-xs text-gray-700">
-                    <div><strong>Step:</strong> Approvals &amp; Restrictions</div>
-                    <div><strong>Status:</strong> {statusValue}</div>
-                    <div><strong>Total steps:</strong> {approvalsSteps.length}</div>
-                  </div>
-                }
-              />
-            </span>
+              className="absolute -top-3 left-1/2 -translate-x-1/2 z-10 cursor-pointer"
+            />
 
-            {/* Círculo + texto **sem** evento de modal */}
-            <Timeline.Circle status={statusValue} />
-            <Timeline.Text>{item.name}</Timeline.Text>
+            {/* Círculo e texto – SEM eventos */}
+            <Timeline.Circle status={statusValue} className="pointer-events-none" />
+            <Timeline.Text className="pointer-events-none">
+              {item.name}
+            </Timeline.Text>
 
-            {/* Modal */}
             <TimelineApprovalsModal
               open={showApprovalsModal}
               onClose={() => setShowApprovalsModal(false)}
@@ -32,7 +43,6 @@
             />
           </>
         ) : (
-          /* ------------- passos normais ------------- */
           <>
             <Timeline.Circle status={statusValue} />
             <Timeline.Text>{item.name}</Timeline.Text>
@@ -41,3 +51,4 @@
       </div>
     </Timeline.Step>
   </Fragment>
+);
