--- a/.gitignore
+++ b/.gitignore
@@ -1,54 +1,8 @@
-/* …dentro do map … */
-const isApprovalsStep = item.name === "Approvals and Restrictions";
+Type '{ className: string; status: any; }' is not assignable to type 'IntrinsicAttributes & Pick<StepProps, "status">'.
+  Property 'className' does not exist on type 'IntrinsicAttributes & Pick<StepProps, "status">'.ts(2322)
+(property) className: string
 
-return (
-  <Fragment key={item.key}>
-    <Timeline.Step progress={!isLast} status={statusValue}>
-      <div className="relative flex flex-col items-center justify-center min-h-[180px]">
 
-        {/* seta extra entre passos, caso exista */}
-        {hasExtra && (
-          <span className="absolute -top-3 left-1/2 -translate-x-1/2">
-            <Timeline.Link status={next?.originalStatus} />
-          </span>
-        )}
-
-        {isApprovalsStep ? (
-          <>
-            {/* ---------- único elemento que abre o modal ---------- */}
-            <Timeline.Link
-              status={statusValue}
-              hoverContent={
-                <div className="text-xs text-gray-700">
-                  <div><strong>Step:</strong> Approvals &amp; Restrictions</div>
-                  <div><strong>Status:</strong> {statusValue}</div>
-                  <div><strong>Total steps:</strong> {approvalsSteps.length}</div>
-                </div>
-              }
-              onMouseEnter={() => setShowApprovalsModal(true)}
-              onFocus={() => setShowApprovalsModal(true)}
-              className="absolute -top-3 left-1/2 -translate-x-1/2 z-10 cursor-pointer"
-            />
-
-            {/* Círculo e texto – SEM eventos */}
-            <Timeline.Circle status={statusValue} className="pointer-events-none" />
-            <Timeline.Text className="pointer-events-none">
-              {item.name}
-            </Timeline.Text>
-
-            <TimelineApprovalsModal
-              open={showApprovalsModal}
-              onClose={() => setShowApprovalsModal(false)}
-              data={approvalsSteps}
-            />
-          </>
-        ) : (
-          <>
-            <Timeline.Circle status={statusValue} />
-            <Timeline.Text>{item.name}</Timeline.Text>
-          </>
-        )}
-      </div>
-    </Timeline.Step>
-  </Fragment>
-);
+Type '{ status: any; hoverContent: Element; onMouseEnter: () => void; onFocus: () => void; className: string; }' is not assignable to type 'IntrinsicAttributes & TimelineLinkProps'.
+  Property 'onMouseEnter' does not exist on type 'IntrinsicAttributes & TimelineLinkProps'.ts(2322)
+(property) onMouseEnter: () => void
